--- a/SimTECH/SimTECH/Components/SignalIcon.razor
+++ b/SimTECH/SimTECH/Components/SignalIcon.razor
@@ -68,7 +68,9 @@
     {
         get
         {
-            var styles = $"margin-left:{LapPercentage}%;margin-right:-{(Index * 2)}px;z-index:{(1 + Index)};line-height:0;background-color:grey";
+            var styles = $"margin-left:{LapPercentage}%;margin-right:-{(Index * 2)}px;z-index:{(1 + Index)}";
+
+            styles += ";line-height:0;background-color:var(--mud-palette-surface)";
 
             if (Signal == "Death")
                 styles += ";color: white";
