--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -17,6 +17,8 @@
                 <MudText Typo="Typo.body2">Mistake rolls: @_config.Value.MistakeAmountRolls</MudText>
                 <MudText Typo="Typo.body2">Mistake min rng: @_config.Value.MistakeLowerValue</MudText>
                 <MudText Typo="Typo.body2">Mistake max rng: @_config.Value.MistakeUpperValue</MudText>
+                ΩΩΩΩΩΩλλλλλλλλλλλλλλ
+                ΩΩΩΩΩΩλλλλλλλλλλλλλλ
             </MudPaper>
         </MudItem>
         <MudItem xs="12" sm="6" md="4">
@@ -58,42 +60,41 @@
                         </div>
                         <MudText Typo="Typo.overline">Custom emblems</MudText>
                         <MudStack Row="true">
-                            <span style="color: #49f2e7; fill: #bf34fa">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-playstation-x" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="inherit" stroke-linecap="round" stroke-linejoin="round">
-                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                    <path d="M12 21a9 9 0 0 0 9 -9a9 9 0 0 0 -9 -9a9 9 0 0 0 -9 9a9 9 0 0 0 9 9z"></path>
-                                    <path d="M8.5 8.5l7 7"></path>
-                                    <path d="M8.5 15.5l7 -7"></path>
-                                </svg>
-                            </span>
                             <Emblem Icon="@IconCollection.Polygon" Colour="#49f2e7" Accent="#bf34fa" />
                         </MudStack>
                     </MudPaper>
                 </MudItem>
                 <MudItem xs="12">
                     <MudPaper Elevation="2" MinHeight="200px" Class="pa-4">
-                        <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextColourStyle("red", "yellow"))">01</MudText>
-                        <MudText Typo="Typo.h6" Style="color:red; border: 1px solid yellow">02</MudText>
-
                         <MudSimpleTable>
                             <thead>
                                 <tr>
                                     <th>#</th>
                                     <th>Looks rating</th>
                                 </tr>
-                            </thead>
+                            </thead>                                                                                 
                             <tbody>
                                 <tr>
                                     <td>
-                                        <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextColourStyle("red", "yellow"))">01</MudText>
+                                        <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextNumberStyle("red", "yellow"))">01</MudText>
+                                    </td>
+                                    <td>4/5</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <MudText Typo="Typo.h6" Style="-webkit-text-stroke: 1px red; color:yellow">03</MudText>
                                     </td>
                                     <td>2/5</td>
                                 </tr>
                                 <tr>
-                                    <td>
-                                        <MudText Typo="Typo.h6" Style="color:red; border: 1px solid yellow; border-radius: 5px">03</MudText>
+                                    <td colspan="2">
+                                        <MudStack Row="true" Spacing="0" Class="mud-width-full pa-0" Style="height:8px">
+                                            <span class="py-1" style="width:25%; background-color:red"></span>
+                                            <span class="py-1" style="width:25%; background-color:green"></span>
+                                            <span class="py-1" style="width:25%; background-color:green"></span>
+                                            <span class="py-1" style="width:25%; background-color:yellow"></span>
+                                        </MudStack>
                                     </td>
-                                    <td>3/5</td>
                                 </tr>
                             </tbody>
                         </MudSimpleTable>
@@ -116,8 +117,8 @@
                             <MudTh>Round</MudTh>
                             <MudTh>Race</MudTh>
                             <MudTh Class="pa-0"></MudTh>
-                            <MudTh>Dub team</MudTh>
-                            <MudTh>Dub driver</MudTh>
+                            <MudTh>Team</MudTh>
+                            <MudTh>Driver</MudTh>
                             <MudTh Class="number-col">No.</MudTh>
                         </HeaderContent>
                         <RowTemplate>
