--- a/SimTECH/SimTECH/Pages/Season/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Standings.razor
@@ -31,7 +31,7 @@
                             </HeaderContent>
                             <RowTemplate>
                                 <MudTd Class="number-col">
-                                    <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextColourStyle(context.Colour, context.Accent))">@context.Position</MudText>
+                                    <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextNumberStyle(context.Colour, context.Accent))">@context.Position</MudText>
                                 </MudTd>
                                 <MudTd Class="accent-cell">
                                     <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
@@ -68,7 +68,7 @@
                             </HeaderContent>
                             <RowTemplate>
                                 <MudTd DataLabel="#" Class="number-col">
-                                    <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextColourStyle(context.Colour, context.Accent))">@context.Position</MudText>
+                                    <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextNumberStyle(context.Colour, context.Accent))">@context.Position</MudText>
                                 </MudTd>
                                 <MudTd Class="accent-cell">
                                     <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
@@ -99,7 +99,7 @@
                     <ToolBarContent>
                         <MudText Typo="Typo.h4">WDC results</MudText>
                         <MudSpacer />
-                        <MudButtonGroup Color="Color.Primary" Variant="Variant.Outlined">
+                        <MudButtonGroup>
                             <ScreenshotButton TargetId="wdc-season-results" />
                             <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" OnClick="ShowWdcResultGraph" />
                         </MudButtonGroup>
@@ -121,7 +121,7 @@
                     </HeaderContent>
                     <RowTemplate>
                         <MudTd Class="number-col">
-                            <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextColourStyle(context.Colour, context.Accent))">@context.Position</MudText>
+                            <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextNumberStyle(context.Colour, context.Accent))">@context.Position</MudText>
                         </MudTd>
                         <MudTd Class="accent-cell">
                             <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
@@ -188,7 +188,7 @@
                 </HeaderContent>
                 <RowTemplate>
                     <MudTd Class="number-col">
-                        <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextColourStyle(context.Colour, context.Accent))">@context.Position</MudText>
+                        <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextNumberStyle(context.Colour, context.Accent))">@context.Position</MudText>
                     </MudTd>
                     <MudTd Class="accent-cell">
                         <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
