--- a/SimTECH/SimTECH/Pages/Season/SeasonTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonTeams.razor
@@ -11,7 +11,7 @@
             <MudButton Variant="Variant.Filled" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="EnterTeam">New</MudButton>
         </ToolBarContent>
         <Columns>
-            <TemplateColumn Sortable="false" HeaderClass="accent-cell" CellClass="accent-cell">
+            <TemplateColumn Sortable="false" CellClass="accent-cell">
                 <CellTemplate>
                     <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Item.Colour))"></span>
                 </CellTemplate>
@@ -19,14 +19,7 @@
             <PropertyColumn Property="e => e.Name" CellStyleFunc="@ViewHelper.TeamBorderRightStyleFunc" />
             <TemplateColumn T="SeasonTeam" SortBy="e => e.Team.Country" Title="Country">
                 <CellTemplate>
-                    @if (context.Item.Team is not null)
-                    {
-                        <CountryFlag Code="@context.Item.Team.Country" Size="FlagSize.Small" IncludeName="true" />
-                    }
-                    else
-                    {
-                        <MudText>[wtf, no base team?]</MudText>
-                    }
+                    <CountryFlag Code="@context.Item.Team.Country" Size="FlagSize.Small" IncludeName="true" />
                 </CellTemplate>
             </TemplateColumn>
             <PropertyColumn Property="e => e.Principal" CellClass="font-subtitle2" />
@@ -54,7 +47,7 @@
             <TemplateColumn T="SeasonTeam" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup>
-                        <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTeamEntrant(context.Item))" />
+                        <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTeam(context.Item))" />
                     </MudButtonGroup>
                 </CellTemplate>
             </TemplateColumn>
@@ -78,8 +71,8 @@
         ManufacturerData = await ManufacturerService.GetManufacturers();
     }
 
-    async Task EnterTeam() => await UpdateTeamEntrant(new SeasonTeam());
-    async Task UpdateTeamEntrant(SeasonTeam item)
+    async Task EnterTeam() => await UpdateTeam(new SeasonTeam());
+    async Task UpdateTeam(SeasonTeam item)
     {
         var parameters = new DialogParameters
             {
